[gd_scene load_steps=14 format=3 uid="uid://dx6ilddy21g34"]

[ext_resource type="Script" path="res://Components/contracts_window.gd" id="1_0rn53"]
[ext_resource type="Texture2D" uid="uid://cybnfqvn10vm" path="res://Resources/Icons/card-icon-pink.png" id="1_dcrlt"]
[ext_resource type="StyleBox" uid="uid://swwmbq60e0jw" path="res://Resources/CustomResource/SignInButton.tres" id="3_nlg51"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4cva"]
bg_color = Color(0.0313726, 0.0196078, 0.0941176, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
shadow_size = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4scxh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cppxm"]
bg_color = Color(0.0313726, 0.0196078, 0.0941176, 1)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g87qv"]
content_margin_left = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e88fp"]
content_margin_left = 20.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.164706, 0.152941, 0.235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rw1kd"]
content_margin_left = 5.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ex1gv"]
content_margin_left = 0.0
bg_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_351p5"]
bg_color = Color(0.248005, 0.000992721, 0.288946, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jfk3v"]
bg_color = Color(0.388235, 0.270588, 0.929412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhc3l"]
bg_color = Color(0.878431, 0.223529, 0.992157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ContractsWindow" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.751562
anchor_bottom = 0.912963
script = ExtResource("1_0rn53")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_q4cva")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -143.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0.223529, 0.992157, 1)
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxEmpty_4scxh")
text = "CONTRACTS"
horizontal_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Panel/HBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("1_dcrlt")
expand_mode = 1
stretch_mode = 6

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_cppxm")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.010395
anchor_top = 0.0180467
anchor_right = 0.988912
anchor_bottom = 0.980892
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 25
text = "Token Contracts"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="BeatsAddress" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer" groups=["ContractLineEdits"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_g87qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_e88fp")
placeholder_text = "Beats contract address"
caret_blink = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.607843)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_rw1kd")
text = "Beats contract address"

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="GMRAddress" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer3" groups=["ContractLineEdits"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_g87qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_e88fp")
placeholder_text = "GMR address"
caret_blink = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.607843)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_rw1kd")
text = "GMR address"

[node name="Label2" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 25
text = "NFT Items Contract"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="CardAddress" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer2" groups=["ContractLineEdits"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_g87qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_e88fp")
placeholder_text = "Card contract address"
caret_blink = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.607843)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_rw1kd")
text = "Card contract address"

[node name="VBoxContainer4" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="BundleAddress" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer4" groups=["ContractLineEdits"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_g87qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_e88fp")
placeholder_text = "Card bundle address"
caret_blink = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.607843)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_rw1kd")
text = "Card bundle address"

[node name="Label3" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 25
text = "NFT Marketplace address"

[node name="VBoxContainer5" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="CardMarketplaceAddress" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer5" groups=["ContractLineEdits"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_g87qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_e88fp")
placeholder_text = "Card marketplace address"
caret_blink = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer5"]
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.607843)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_rw1kd")
text = "Card marketplace address"

[node name="VBoxContainer6" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="BundleMarketplaceAddress" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer6" groups=["ContractLineEdits"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_g87qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_e88fp")
placeholder_text = "Bundle marketplace address"
caret_blink = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/VBoxContainer6"]
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.607843)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_rw1kd")
text = "Pack marketplace address"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="UpdateContractButton" type="Button" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxFlat_ex1gv")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_351p5")
theme_override_styles/hover = SubResource("StyleBoxFlat_jfk3v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fhc3l")
theme_override_styles/normal = ExtResource("3_nlg51")
text = "UPDATE CONTRACTS"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 25
text = "	Card Upgrade Contracts"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2

[node name="CardItemUpgradeAddress" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer" groups=["ContractLineEdits"]]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_g87qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_e88fp")
placeholder_text = "Card upgrade item address"
caret_blink = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.607843)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_rw1kd")
text = "Card upgrade item address"

[node name="Label3" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.745098)
theme_override_font_sizes/font_size = 25
text = "Upgrades and Misc Marketplace address"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2

[node name="CardMarketplaceUpgradeItemAddress" type="LineEdit" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer2" groups=["ContractLineEdits"]]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxFlat_g87qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_e88fp")
placeholder_text = "Card Marketplace upgrade item address"
caret_blink = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer2/VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.929412, 0.890196, 0.988235, 0.607843)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_rw1kd")
text = "Card Marketplace upgrade item address"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_up" from="Panel/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/HBoxContainer2/UpdateContractButton" to="." method="_on_update_contract_button_button_up"]
